package Practica2;

public class SalarioInvalidoException  extends Exception{
    public SalarioInvalidoException(String mensajeAlerta){
        super(mensajeAlerta);
    }
    
}
